@@ -209,3 +209,4 @@ Revision	Version Updated		Log Message
 192		C++			Read regiment costs from a file instead of hardcoding them
 193		C++			Complete port whitelist and blacklist.
 194		C++			Speed up state conversion (O(n^2)->O(n))
+195		C++			Speed up country mapping
